--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -14,6 +14,15 @@
     opacity: 0.4;
 }
 
+#EditPeople table
+{
+    border: 5px solid transparent;
+}
+#EditPeople.modified table
+{
+    border: 5px solid red;
+}
+
 
 #IDNavigator
 {
