--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -27,7 +27,7 @@
 #IDNavigator
 {
     border: 1px solid black;
-    
+    padding: 4px;
 }
 #IDNavigator a
 {
@@ -35,11 +35,11 @@
     
     border: 1px outset;
     
-    width: 16px;
-    height: 16px;
+    width: 28px;
+    height: 28px;
     padding: 4px;
     
-    background-image: url(/css/humanity/images/ui-icons_cb672b_256x240.png);
+    background-image: url(/img/sprite-kiwi-pack.png);
     background-clip: content-box;
 }
 #IDNavigator input
@@ -47,18 +47,16 @@
     display: inline-block;
     border: 1px inset;
     width: 45px;
+    height: 20px;
 }
 
 
-#IDNav-fist { background-position: -44px -156px; }
-#IDNav-back { background-position: -93px  -12px; }
-#IDNav-next { background-position: -29px  -12px; }
-#IDNav-last { background-position: -28px -156px; }
-/* Dit zijn alternatieve knopjes. (Met pijltjes.) */
-/*#IDNav-fist { background-position: -236px -44px; }
-#IDNav-back { background-position:  -92px -44px; }
-#IDNav-next { background-position:  -28px -44px; }
-#IDNav-last { background-position: -208px -44px; }*/
+#IDNav-fist { background-position:  -96px -160px; }
+#IDNav-back { background-position: -192px -160px; }
+#IDNav-next { background-position:  -96px  -64px; }
+#IDNav-last { background-position: -128px -128px; }
+#IDNav-save { background-position:  -32px -192px; }
+
 
 
 
