Weg vrijbanen voor een tweede <input> in de navigatiebalk.

--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -50,8 +50,11 @@
 {
     display: inline-block;
     border: 1px inset;
+    height: 18px;
+}
+#IDNav-id
+{
     width: 45px;
-    height: 20px;
 }
 
 
