--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -84,6 +84,8 @@
 #IDNav-next { background-position:  -96px  -64px; }
 #IDNav-last { background-position: -128px -128px; }
 #IDNav-search { background-position:  -64px -160px; }
+#IDNav-insert { background-position: -128px  -96px; }
+#IDNav-delete { background-position:  -32px  -64px; }
 #IDNav-save { background-position:  -32px -192px; }
 
 
