--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -53,11 +53,12 @@
     
     border: 1px outset;
     
-    width: 28px;
-    height: 28px;
-    padding: 4px;
+    width: 32px;
+    height: 32px;
+    padding: 2px;
     
     background-image: url(/img/sprite-kiwi-pack.png);
+    background-origin: content-box;
     background-clip: content-box;
 }
 #IDNavigator a:active
