Spinner en snellere s/g/r

--- a/css/edit-people.css
+++ b/css/edit-people.css
@@ -114,7 +114,9 @@ td.special_label
 }
 td.loading
 {
-    background-color: lime; /* TODO: spinner */
+    background-image: url(/img/spinner.gif);
+    background-position: center;
+    background-repeat: no-repeat;
 }
 td.special_label ul
 {
