--- a/error/error.css
+++ b/error/error.css
@@ -42,7 +42,7 @@ p, div.backlink
     margin-left: 16px;
     font-family: sans-serif;
     font-size: 13px;
-    height: 38px;
+    height: 88px;
     width: 550px;
     
     color: #C3C3C3;
@@ -53,6 +53,7 @@ div.backlink
 {
     text-align: center;
     width: auto;
+    height: auto;
 }
 div.backlink a, div.backlink a:hover, div.backlink a:active, div.backlink a:visited
 {
@@ -77,7 +78,7 @@ div.notfound
 }
 div.notfound div.spacer
 {
-    height: 150px;
+    height: 100px;
 }
 
 div.forbidden
@@ -90,6 +91,19 @@ div.forbidden
 }
 div.forbidden div.spacer
 {
-    height: 150px;
+    height: 100px;
+}
+
+div.internal
+{
+    background-image: url(/error/tumbeasts/orig/tbservers.png);
+    background-repeat: no-repeat;
+    background-size: 500px;
+    
+    background-position: 100px 140px;
+}
+div.internal div.spacer
+{
+    height: 180px;
 }
 
