--- a/css/calendar.css
+++ b/css/calendar.css
@@ -14,7 +14,7 @@ calendars.css - CSS for calendar components
 	-moz-border-radius: 3px 3px 0px 0px;
 	-webkit-border-radius: 3px 3px 0px 0px;
 	color: #fff;
-	background-image:url("../img/grad.png");
+	background-image:url("/img/grad.png");
 	background-position:center top;
 	background-repeat:repeat-x;
 	background-color:#00A1CD;
@@ -47,7 +47,7 @@ calendars.css - CSS for calendar components
 	vertical-align: bottom;
 	font-weight: normal;
 	color: #666;
-	background:url("../img/boxheader.gif") repeat-x scroll center top #E2E2E2;
+	background:url("/img/boxheader.gif") repeat-x scroll center top #E2E2E2;
 	border-bottom: 1px solid #cccccc;
 }
 .mini-calendar tbody th, .mini-calendar tbody td {
@@ -86,7 +86,7 @@ calendars.css - CSS for calendar components
 .mini-calendar td.today a, .mini-calendar td a:hover {
 	color: #fff;
 	background-color:#00A1CD;
-	background-image:url("../img/grad.png");
+	background-image:url("/img/grad.png");
 	background-position:center bottom;
 	background-repeat:repeat-x;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4) inset;
@@ -112,7 +112,7 @@ calendars.css - CSS for calendar components
 	vertical-align: bottom;
 	font-weight: normal;
 	color: #666;
-	background:url("../img/boxheader.gif") repeat-x scroll center top #E2E2E2;
+	background:url("/img/boxheader.gif") repeat-x scroll center top #E2E2E2;
 	border-bottom: 1px solid #cccccc;
 	padding-bottom: 5px;
 	border-right: 1px solid #cccccc;
@@ -151,7 +151,7 @@ calendars.css - CSS for calendar components
 	-moz-box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 	-webkit-box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 	background-color:#00A1CD;
-	background-image:url("../img/grad.png");
+	background-image:url("/img/grad.png");
 	background-position:center bottom;
 	background-repeat:repeat-x;
 	color:#FFFFFF;
@@ -171,7 +171,7 @@ calendars.css - CSS for calendar components
 	-webkit-border-radius: 10px;
 	color: #fff;
 	font-weight:normal;
-	background:#404040 url('../img/grad.png') repeat-x bottom;
+	background:#404040 url('/img/grad.png') repeat-x bottom;
 	border-width:2px;
 	border-style:groove;
 	border:1px solid rgba(0, 0, 0, 0.2);
@@ -216,7 +216,7 @@ calendars.css - CSS for calendar components
 	border-bottom: 1px solid #006c89;
 	border-right: 1px solid #0084a8;
 	color: #fff;
-	background-image:url("../img/grad.png");
+	background-image:url("/img/grad.png");
 	background-position:center top;
 	background-repeat:repeat-x;
 	background-color:#00A1CD;
@@ -263,7 +263,7 @@ calendars.css - CSS for calendar components
 .calendar tbody tr td:hover, .calendar tbody .today {
 	color:#fff;
 	background-color:#00A1CD;
-	background-image:url("../img/grad.png");
+	background-image:url("/img/grad.png");
 	background-position:center bottom;
 	background-repeat:repeat-x;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4) inset;
