--- a/css/extensions.css
+++ b/css/extensions.css
@@ -13,7 +13,7 @@ extensions.css - CSS for plugins such as jQuery Lightbox, jQuery UI etc
 	opacity: 0.8;
 	filter: alpha(opacity=80);
 	background-repeat: no-repeat;
-	background-image: url('../img/tipsy.gif');
+	background-image: url('/img/tipsy.gif');
 }
 .tipsy-inner {
 	padding: 5px 8px 4px 8px;
@@ -134,7 +134,7 @@ div.wysiwyg {
 width:100%;
 border: 1px solid #cccccc; 
 padding: 5px; 
-background:url("../img/bg-input.gif") repeat-x top #FEFEFE;
+background:url("/img/bg-input.gif") repeat-x top #FEFEFE;
 border-radius:3px;
 -moz-border-radius:3px;
 -webkit-border-radius:3px;
@@ -144,7 +144,7 @@ div.wysiwyg * { margin: 0; padding: 0; }
 div.wysiwyg ul.panel { border-bottom: 1px solid #cccccc; float: left; width: 100%; padding: 0 0 0 0; }
 div.wysiwyg ul.panel li { list-style-type: none; float: left; margin: 1px 2px 3px 0;  background: #ffffff;}
 div.wysiwyg ul.panel li.separator { height: 16px; margin: 0 4px; border-left: 1px solid #cccccc; }
-div.wysiwyg ul.panel li a { text-indent: -5000px; opacity: 0.85; filter:alpha(opacity=85); display: block; width: 16px; height: 16px; background: url('../img/jquery.wysiwyg.gif') no-repeat -64px -80px; border: 0; cursor: pointer; padding: 1px; }
+div.wysiwyg ul.panel li a { text-indent: -5000px; opacity: 0.85; filter:alpha(opacity=85); display: block; width: 16px; height: 16px; background: url('/img/jquery.wysiwyg.gif') no-repeat -64px -80px; border: 0; cursor: pointer; padding: 1px; }
 div.wysiwyg ul.panel li a:hover, div.wysiwyg ul.panel li a.active { opacity: 1.00; filter:alpha(opacity=100); }
 div.wysiwyg ul.panel li a.active { background-color: #f9f9f9; border: 1px solid #cccccc; border-left-color: #aaaaaa; border-top-color: #aaaaaa; padding: 0; }
 
@@ -237,7 +237,7 @@ div.wysiwyg iframe { border: 0;  clear: left; margin: 4px 0 0 1px; }
 .ui-datepicker .ui-widget-content a { color: #222222; }
 .ui-datepicker .ui-widget-header { 
 background-color:#00A1CD;
-background-image:url("../img/grad.png");
+background-image:url("/img/grad.png");
 background-position:center top;
 background-repeat:repeat-x;
 border-color:#0098C2 #0098C2 #006C89;
@@ -259,7 +259,7 @@ box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 -moz-box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 -webkit-box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 background-color:#00A1CD;
-background-image:url("../img/grad.png");
+background-image:url("/img/grad.png");
 background-position:center bottom;
 background-repeat:repeat-x;
 color:#FFFFFF;
@@ -271,7 +271,7 @@ box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 -moz-box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 -webkit-box-shadow:0 0 5px rgba(0, 0, 0, 0.4) inset;
 background-color:#00A1CD;
-background-image:url("../img/grad.png");
+background-image:url("/img/grad.png");
 background-position:center bottom;
 background-repeat:repeat-x;
 color:#FFFFFF;
@@ -284,14 +284,14 @@ border:1px solid #00A1CD;
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url(../img/jquery-ui/ui-icons_222222_256x240.png); }
-.ui-widget-content .ui-icon {background-image: url(../img/jquery-ui/ui-icons_222222_256x240.png); }
-.ui-widget-header .ui-icon {background-image: url(../img/jquery-ui/ui-icons_222222_256x240.png); }
-.ui-state-default .ui-icon { background-image: url(../img/jquery-ui/ui-icons_888888_256x240.png); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(../img/jquery-ui/ui-icons_454545_256x240.png); }
-.ui-state-active .ui-icon {background-image: url(../img/jquery-ui/ui-icons_454545_256x240.png); }
-.ui-state-highlight .ui-icon {background-image: url(../img/jquery-ui/ui-icons_2e83ff_256x240.png); }
-.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(../img/jquery-ui/ui-icons_cd0a0a_256x240.png); }
+.ui-icon { width: 16px; height: 16px; background-image: url(/img/jquery-ui/ui-icons_222222_256x240.png); }
+.ui-widget-content .ui-icon {background-image: url(/img/jquery-ui/ui-icons_222222_256x240.png); }
+.ui-widget-header .ui-icon {background-image: url(/img/jquery-ui/ui-icons_222222_256x240.png); }
+.ui-state-default .ui-icon { background-image: url(/img/jquery-ui/ui-icons_888888_256x240.png); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(/img/jquery-ui/ui-icons_454545_256x240.png); }
+.ui-state-active .ui-icon {background-image: url(/img/jquery-ui/ui-icons_454545_256x240.png); }
+.ui-state-highlight .ui-icon {background-image: url(/img/jquery-ui/ui-icons_2e83ff_256x240.png); }
+.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(/img/jquery-ui/ui-icons_cd0a0a_256x240.png); }
 
 /* positioning */
 .ui-icon-carat-1-n { background-position: 0 0; }
@@ -547,7 +547,7 @@ border:1px solid #00A1CD;
 	border:none;	
 }
 .ui-datepicker-calendar thead td, .ui-datepicker-calendar thead th {
-	background:url("../img/boxheader.gif") repeat-x scroll center top #E2E2E2;
+	background:url("/img/boxheader.gif") repeat-x scroll center top #E2E2E2;
 border-bottom:1px solid #CCCCCC;
 border-right:1px solid #CCCCCC;
 color:#333333;
