--- a/inc/templates/footer.html
+++ b/inc/templates/footer.html
@@ -24,5 +24,5 @@
 */
 
 ?>    <!-- footer start -->
-    <footer class="width"> <?=Config::short_app()?> | Copyright ©2011 Thijs van Dijk </footer>
+    <footer class="width"> <?=Config::short_app()?> &nbsp; | &nbsp; Copyright ©2011 Thijs van Dijk </footer>
     <!-- footer end --> 
