--- a/inc/templates/navigation.html
+++ b/inc/templates/navigation.html
@@ -29,73 +29,35 @@
         <nav class="width">
           <ul>
             <li id="logo"><a href="#">Admina</a></li>
-            <li class="active"><a href="#">Dashboard</a></li>
-            <li><a href="#">Content</a>
-              <ul>
-                <li><a href="#">Content Manager</a>
-                  <ul>
-                    <li><a href="#">Add New Page</a></li>
-                    <li><a href="#">Edit Page</a></li>
-                    <li><a href="#">Delete</a></li>
-                    <li><a href="#">Page Layouts</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Import Content </a></li>
-                <li><a href="#">Export Content</a>
-                  <ul>
-                    <li><a href="#">Export XML</a></li>
-                    <li><a href="#">Export Other</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-            <li><a href="#">Users</a>
-              <ul>
-                <li><a href="#">Manage Users</a>
-                  <ul>
-                    <li><a href="#">Add New User</a>
-                      <ul>
-                        <li><a href="#">Add New Member</a></li>
-                        <li><a href="#">Add New Author</a></li>
-                        <li><a href="#">Add New Moderator</a></li>
-                        <li><a href="#">Add New Admin</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">Edit User</a> </li>
-                    <li><a href="#">Delete User</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Manage Usergroups</a></li>
-                <li><a href="#">User Permissions</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Pages</a></li>
-            <li class="right"><a class="img" href="#"><img src="./img/nav/gear.png" alt="">Settings</a>
+            <li><a href="/">Queries</a></li>
+            <li><a href="/bewerken">Bewerken</a></li>
+            <li><a href="/logout">Uitloggen</a></li>
+            <li class="right"><a class="img" href="#"><img src="./img/nav/gear.png" alt="">Instellingen</a>
               <ul class="right">
-                <li><a class="img" href="#"><img src="./img/nav/width.png" alt="">Page Width</a>
+                <li><a class="img" href="#"><img src="./img/nav/width.png" alt="">Paginabreedte</a>
                   <ul id="pagewidth">
-                    <li> <a title="Switch to 100% width layout" class="layout100" href="javascript:void(0);">Switch to <strong>100%</strong> width</a> </li>
-                    <li> <a title="Switch to 90% width layout" class="layout90" href="javascript:void(0);">Switch to <strong>90%</strong> width</a> </li>
-                    <li> <a title="Switch to 75% width layout" class="layout75" href="javascript:void(0);">Switch to <strong>75%</strong> width</a> </li>
-                    <li> <a title="Switch to 980px layout" class="layout980" href="javascript:void(0);">Switch to <strong>980px</strong> width</a> </li>
-                    <li> <a title="Switch to 1280px layout" class="layout1280" href="javascript:void(0);">Switch to <strong>1280px</strong> width</a> </li>
-                    <li> <a title="Switch to 1400px layout" class="layout1400" href="javascript:void(0);">Switch to <strong>1400px</strong> width</a> </li>
-                    <li> <a title="Switch to 1600px layout" class="layout1600" href="javascript:void(0);">Switch to <strong>1600px</strong> width</a> </li>
+                    <li> <a title="Switch to 100% width layout" class="layout100" href="javascript:void(0);">Wissel naar <strong>100%</strong> </a> </li>
+                    <li> <a title="Switch to 90% width layout" class="layout90" href="javascript:void(0);">Wissel naar <strong>90%</strong> </a> </li>
+                    <li> <a title="Switch to 75% width layout" class="layout75" href="javascript:void(0);">Wissel naar <strong>75%</strong> </a> </li>
+                    <li> <a title="Switch to 980px layout" class="layout980" href="javascript:void(0);">Wissel naar <strong>980px</strong> </a> </li>
+                    <li> <a title="Switch to 1280px layout" class="layout1280" href="javascript:void(0);">Wissel naar <strong>1280px</strong> </a> </li>
+                    <li> <a title="Switch to 1400px layout" class="layout1400" href="javascript:void(0);">Wissel naar <strong>1400px</strong> </a> </li>
+                    <li> <a title="Switch to 1600px layout" class="layout1600" href="javascript:void(0);">Wissel naar <strong>1600px</strong> </a> </li>
                   </ul>
                 </li>
-                <li><a class="img" href="#"><img src="./img/nav/color.png" alt="">Theme Color</a>
+                <li><a class="img" href="#"><img src="./img/nav/color.png" alt="">Kleur</a>
                   <ul id="themecolor">
-                    <li><a class="blue" href="?theme=blue"><span></span>Blue Theme</a></li>
-                    <li><a class="red" href="?theme=red"><span></span>Red Theme</a></li>
-                    <li><a class="green" href="?theme=green"><span></span>Green Theme</a></li>
+                    <li><a class="blue" href="?theme=blue"><span></span>Blauw</a></li>
+                    <li><a class="red" href="?theme=red"><span></span>Rood</a></li>
+                    <li><a class="green" href="?theme=green"><span></span>Groen</a></li>
                   </ul>
                 </li>
               </ul>
             </li>
             <li class="right first"><a class="img" href="#"><img src="./img/nav/help.png" alt="">Help</a>
               <ul class="right">
-                <li><a class="img" href="#"><img src="./img/nav/docs.png" alt="">Documentation</a></li>
-                <li><a class="img" href="#"><img src="./img/nav/forum.png" alt="">Support Forums</a></li>
+                <li><a class="img" href="#"><img src="./img/nav/docs.png" alt="">Documentatie</a></li>
+                <li><a class="img" href="#"><img src="./img/nav/forum.png" alt="">Forums</a></li>
                 <li><a class="img" href="#"><img src="./img/nav/contact.png" alt="">Contact</a></li>
               </ul>
             </li>
@@ -104,3 +66,4 @@
       </div>
     </div>
     <!-- Nav End -->
+
