--- a/inc/templates/navigation.html
+++ b/inc/templates/navigation.html
@@ -58,7 +58,7 @@
               <ul class="right">
                 <li><a class="img" href="#"><img src="./img/nav/docs.png" alt="">Documentatie</a></li>
                 <li><a class="img" href="#"><img src="./img/nav/forum.png" alt="">Forums</a></li>
-                <li><a class="img" href="#"><img src="./img/nav/contact.png" alt="">Contact</a></li>
+                <li><a class="img" href="mailto:nerdcie@collegiummusicum.nl"><img src="./img/nav/contact.png" alt="">Contact</a></li>
               </ul>
             </li>
           </ul>
