--- a/inc/templates/sidebar.html
+++ b/inc/templates/sidebar.html
@@ -37,9 +37,9 @@
           <!-- Widget End --> 
           <!-- Widget Start -->
           <li id="search" class="sortable-item">
-            <h3>Search</h3>
+            <h3>Zoeken</h3>
             <form method="post" class="form" action="">
-              <input value="Search..." onBlur="if (this.value == '') {this.value = 'Search...';}" onFocus="if (this.value == 'Search...') {this.value = '';}" />
+              <input id="sidebar-pick" value="Zoeken..." onBlur="if (this.value == '') {this.value = 'Zoeken...';}" onFocus="if (this.value == 'Zoeken...') {this.value = '';}" />
             </form>
           </li>
           <!-- Widget End -->
